--- a/robotcode/build.gradle
+++ b/robotcode/build.gradle
@@ -1,16 +1,11 @@
-plugins {
-    id "idea"
-    id "jaci.openrio.gradle.GradleRIO" version "2017.0.5"
-}
-
 frc {
     team = "1885"
     robotClass = "org.usfirst.frc.team1885.robot.Robot"
 }
 
 dependencies {
-    compile wpilib()
     compile talonSrx()
+    compile project(":visioncode")
 }
 
 def robotManifest = {
@@ -25,4 +20,13 @@ jar {
 
 task wrapper(type: Wrapper) {
     gradleVersion = '3.2.1'
+}
+
+task printCollections { 
+
+	doLast { 
+		configurations.compile.collect{println "${it} is directory: ${it.isDirectory()}"}
+		
+	
+	}
 }
