--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,13 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.ear
+*.jar
 
-!res/*
+gradle/*
+
+!robotcode/res/*
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
