Added new visioncode project

--- a/build.gradle
+++ b/build.gradle
@@ -52,3 +52,7 @@ project(':commscode'){
   apply plugin: 'eclipse'
   apply plugin: 'java'
 }
+project(':visioncode') { 
+   apply plugin: 'eclipse'
+   apply plugin: 'java'
+}
