Updated gradle configuration to remove old vision project

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include 'robotcode', 'commscode', 'robotcode', 'visioncode','Androidcode', 'OpenCV'
+include 'robotcode', 'commscode' ,'Androidcode'
