--- a/Androidcode/App/app/build.gradle
+++ b/Androidcode/App/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     testCompile 'junit:junit:4.12'
     compile project(':openCVLibrary300')
+    compile project(':visionUtils')
 }
