Updated the dependencies of visioncode to use the visionutils

--- a/build.gradle
+++ b/build.gradle
@@ -52,3 +52,13 @@ project(':commscode'){
   apply plugin: 'eclipse'
   apply plugin: 'java'
 }
+
+project(':visioncode') {
+  apply plugin: 'eclipse'
+  apply plugin: 'java'
+  dependencies { 
+	compile project(':Androidcode:App:visionUtils')
+
+  }
+
+}
