--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include 'robotcode', 'commscode', 'Androidcode:app:visionutils'
+include 'robotcode', 'commscode','visioncode', 'Androidcode:App:visionUtils'
