Cleaned up client software

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include 'robotcode', 'commscode','VisionCode', 'Androidcode:App:visionUtils'
+include 'robotcode', 'commscode','VisionClient', 'Androidcode:App:visionUtils'
