--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ project(':commscode'){
   apply plugin: 'java'
 }
 
-project(':VisionCode') {
+project(':VisionClient') {
   apply plugin: 'eclipse'
   apply plugin: 'java'
   dependencies { 
