--- a/build.gradle
+++ b/build.gradle
@@ -62,3 +62,18 @@ project(':VisionClient') {
   }
 
 }
+
+project(':displaycode'){
+  apply plugin: 'eclipse'
+  apply plugin: 'java'
+  apply plugin: 'jaci.openrio.gradle.GradleRIO'
+
+  repositories {
+    mavenCentral()
+  }
+
+  dependencies {
+    compile wpilib() 
+    compile 'eu.hansolo:tilesfx:1.3.5'
+  }
+}
