--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ project(':robotcode') {
        team = "1885"
        robotClass = "org.usfirst.frc.team1885.robot.Robot"
    }
-   repositories { 
+   repositories {
       jcenter()
 
    }
@@ -25,8 +25,8 @@ project(':robotcode') {
        compile wpilib()
        compile talonSrx()
        compile files('res/navx_frc.jar')
-       compile group: 'com.google.guava', name: 'guava', version: '19.0' 
-
+       compile group: 'com.google.guava', name: 'guava', version: '19.0'
+       compile group: 'org.json', name: 'json', version: '20090211'
 
 
        testCompile( 'junit:junit:4.12', 'org.codehaus.groovy:groovy-all:2.4.4', 'org.spockframework:spock-core:1.0-groovy-2.4')
@@ -56,7 +56,7 @@ project(':commscode'){
 project(':VisionClient') {
   apply plugin: 'eclipse'
   apply plugin: 'java'
-  dependencies { 
+  dependencies {
 	compile project(':Androidcode:App:visionUtils')
 
   }
