--- a/build.gradle
+++ b/build.gradle
@@ -69,11 +69,17 @@ project(':displaycode'){
   apply plugin: 'jaci.openrio.gradle.GradleRIO'
 
   repositories {
-    mavenCentral()
+    mavenCentral() // tilesFX & Medusa (gauges)
+    jcenter() // fontawesomeFX
   }
 
   dependencies {
     compile wpilib() 
+    compile 'de.jensd:fontawesomefx-commons:8.15'
+    compile 'de.jensd:fontawesomefx-fontawesome:4.7.0-5'
+    compile 'de.jensd:fontawesomefx-icons525:3.0.0-4'
+    compile 'de.jensd:fontawesomefx-materialdesignfont:1.4.57-2'
+    compile 'eu.hansolo:Medusa:7.6'
     compile 'eu.hansolo:tilesfx:1.3.5'
   }
 }
