--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id "java"
     id "eclipse"
     id "idea"
-    id "jaci.openrio.gradle.GradleRIO" version "2017.1.0" apply false
+    id "jaci.openrio.gradle.GradleRIO" version "2017.1.5" apply false
 }
 
 project(':commscode'){
@@ -12,6 +12,10 @@ project(':commscode'){
    frc{
      team = "1885"
      deploy = false
+   }
+   
+   wpi {
+		opencvVersion = "3.1.0"
    }
    
    repositories{
@@ -36,6 +40,10 @@ project(':robotcode') {
    frc {
        team = "1885"
        robotClass = "org.usfirst.frc.team1885.robot.Robot"
+   }
+   
+   wpi {
+		opencvVersion = "3.1.0"
    }
    repositories {
       jcenter()
@@ -76,28 +84,28 @@ project(':robotcode') {
 //  }
 //}
 
-project(':displaycode'){
-  apply plugin: 'eclipse'
-  apply plugin: 'java'
-  apply plugin: 'jaci.openrio.gradle.GradleRIO'
+// project(':displaycode'){
+  // apply plugin: 'eclipse'
+  // apply plugin: 'java'
+  // apply plugin: 'jaci.openrio.gradle.GradleRIO'
   
-  frc{
-    team = "1885"
-    deploy = false
-  }
+  // frc{
+    // team = "1885"
+    // deploy = false
+  // }
 
-  repositories {
-    mavenCentral() // tilesFX & Medusa (gauges)
-    jcenter() // fontawesomeFX
-  }
+  // repositories {
+    // mavenCentral() // tilesFX & Medusa (gauges)
+    // jcenter() // fontawesomeFX
+  // }
 
-  dependencies {
-    compile wpilib() 
-    compile 'de.jensd:fontawesomefx-commons:8.15'
-    compile 'de.jensd:fontawesomefx-fontawesome:4.7.0-5'
-    compile 'de.jensd:fontawesomefx-icons525:3.0.0-4'
-    compile 'de.jensd:fontawesomefx-materialdesignfont:1.4.57-2'
-    compile 'eu.hansolo:Medusa:7.6'
-    compile 'eu.hansolo:tilesfx:1.3.5'
-  }
-}
+  // dependencies {
+    // compile wpilib() 
+    // compile 'de.jensd:fontawesomefx-commons:8.15'
+    // compile 'de.jensd:fontawesomefx-fontawesome:4.7.0-5'
+    // compile 'de.jensd:fontawesomefx-icons525:3.0.0-4'
+    // compile 'de.jensd:fontawesomefx-materialdesignfont:1.4.57-2'
+    // compile 'eu.hansolo:Medusa:7.6'
+    // compile 'eu.hansolo:tilesfx:1.3.5'
+  // }
+// }
