--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id "java"
     id "eclipse"
     id "idea"
-    id "jaci.openrio.gradle.GradleRIO" version "2017.1.0" apply false
+    id "jaci.openrio.gradle.GradleRIO" version "2017.1.5" apply false
 }
 
 project(':commscode'){
@@ -50,8 +50,10 @@ project(':robotcode') {
    }
    dependencies {
        compile wpilib()
-       compile talonSrx()
+       // compile talonSrx()
        compile files('res/navx_frc.jar')
+	   compile files('res/ctrlib/CTRLib.jar')
+	   nativeLib files('res/ctrlib/libCTRLibDriver.so')
        compile group: 'com.google.guava', name: 'guava', version: '19.0'
 //       compile group: 'org.json', name: 'json', version: '20090211'
        compile project(':commscode')
@@ -84,28 +86,30 @@ project(':robotcode') {
 //  }
 //}
 
-// project(':displaycode'){
-  // apply plugin: 'eclipse'
-  // apply plugin: 'java'
-  // apply plugin: 'jaci.openrio.gradle.GradleRIO'
+project(':displaycode'){
+  apply plugin: 'eclipse'
+  apply plugin: 'java'
+  apply plugin: 'jaci.openrio.gradle.GradleRIO'
   
-  // frc{
-    // team = "1885"
-    // deploy = false
-  // }
+  frc{
+    team = "1885"
+    deploy = false
+  }
 
-  // repositories {
-    // mavenCentral() // tilesFX & Medusa (gauges)
-    // jcenter() // fontawesomeFX
-  // }
-
-  // dependencies {
-    // compile wpilib() 
-    // compile 'de.jensd:fontawesomefx-commons:8.15'
-    // compile 'de.jensd:fontawesomefx-fontawesome:4.7.0-5'
-    // compile 'de.jensd:fontawesomefx-icons525:3.0.0-4'
-    // compile 'de.jensd:fontawesomefx-materialdesignfont:1.4.57-2'
-    // compile 'eu.hansolo:Medusa:7.6'
-    // compile 'eu.hansolo:tilesfx:1.3.5'
-  // }
-// }
+  repositories {
+    mavenCentral() // tilesFX & Medusa (gauges)
+    jcenter() // fontawesomeFX
+  }
+  wpi {
+		opencvVersion = "3.1.0"
+  }
+  dependencies {
+    compile wpilib() 
+    compile 'de.jensd:fontawesomefx-commons:8.15'
+    compile 'de.jensd:fontawesomefx-fontawesome:4.7.0-5'
+    compile 'de.jensd:fontawesomefx-icons525:3.0.0-4'
+    compile 'de.jensd:fontawesomefx-materialdesignfont:1.4.57-2'
+    compile 'eu.hansolo:Medusa:7.6'
+    compile 'eu.hansolo:tilesfx:1.3.5'
+  }
+}
